# rules_bzlmodrio_jdk

./: .bazelrc  .bazelrc-cc  .clang-format  .styleguide  0001-Fixup-runtime.patch  MODULE.bazel  README.md  WORKSPACE  maven_deps.bzl
.github/actions/setup-build-buddy/: action.yml
.github/workflows/: auto_update.yml  build.yml  publish.yml
actions/setup-build-buddy/: action.yml
generate/: BUILD.bazel  MODULE.bazel  auto_update.py  generate.py  get_toolchain_dependencies.py  get_version.py  publish.py
generate/templates/: MODULE.bazel.jinja2  WORKSPACE.jinja2  maven_deps.bzl.jinja2
generate/templates/tests/: MODULE.bazel.jinja2  WORKSPACE.jinja2
tests/: .bazelrc  .bazelrc-java  MODULE.bazel  WORKSPACE
tests/java/basic/: BUILD.bazel  BasicTest.java
