module(
    name = "rules_bzlmodrio_jdk",
    version = "17.0.8.1+1",
    compatibility_level = 2024,
)

bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_java", version = "6.4.0")

deps = use_extension("//:maven_deps.bzl", "deps")

bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")

REMOTE_JDK_REPOS = [
    "roboriojdk_linux",
    "roboriojdk_linux_arm64",
    "roboriojdk_mac",
    "roboriojdk_mac_arm64",
    "roboriojdk_windows",
]

[use_repo(
    deps,
    repo,
    repo + "_toolchain_config_repo",
) for repo in REMOTE_JDK_REPOS]

[register_toolchains("@" + name + "_toolchain_config_repo//:all") for name in REMOTE_JDK_REPOS]
