bazel_dep(name = "rules_bzlmodrio_jdk", version = "")
local_path_override(
    module_name = "rules_bzlmodrio_jdk",
    path = "..",
)

bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1")
bazel_dep(name = "rules_checkstyle", version = "10.12.2")
bazel_dep(name = "rules_pmd", version = "7.2.0")
bazel_dep(name = "rules_spotless", version = "2.40.0")
bazel_dep(name = "rules_wpiformat", version = "2024.45")
bazel_dep(name = "rules_wpi_styleguide", version = "2024.11.19")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-params:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-commons:1.6.1",
        "org.junit.platform:junit-platform-console:1.6.1",
        "org.junit.platform:junit-platform-engine:1.6.1",
        "org.junit.platform:junit-platform-launcher:1.6.1",
        "org.junit.platform:junit-platform-suite-api:1.6.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
)
