load("@rules_java//java:defs.bzl", "java_test")
load("@rules_wpi_styleguide//styleguide:java_styleguide.bzl", "java_styleguide")

java_test(
    name = "test",
    srcs = ["BasicTest.java"],
    args = [
        "--select-package",
        "bazelrio_test",
    ],
    env = {
        "LD_LIBRARY_PATH": ".",
        "PATH": ".",
    },  # TODO fishy
    javacopts = ["-Werror"],
    jvm_flags = [
        "-Djava.library.path=.",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    tags = [
        "bazelrio-java-test",
        "no-sandbox",
    ],
    runtime_deps = [
        "@maven//:org_junit_platform_junit_platform_commons",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
    ],
)

java_styleguide(name = "basic_test")
